--- a/index.html
+++ b/index.html
@@ -31,6 +31,27 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12"></div>
+        <table>
+          <tr>
+            <td class="cell" id='1'></td>
+            <td class="cell" id='2'></td>
+            <td class="cell" id='3'></td>
+          </tr>
+          <tr>
+            <td class="cell" id='4'></td>
+            <td class="cell" id='5'></td>
+            <td class="cell" id='6'></td>
+          </tr>
+          <tr>
+            <td class="cell" id='7'></td>
+            <td class="cell" id='8'></td>
+            <td class="cell" id='9'></td>
+          </tr>
+
+        </table>
+        <div class="endgame">
+        <p> only visible after the end </p>
+        </div>
       </div>
     </div>
   </body>
