Table designed and styled

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="../style/style.css">
     <title>Library</title>
   </head>
   <body>
