--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../style/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet"> 
     <title>Library</title>
   </head>
   <body>
