--- a/index.html
+++ b/index.html
@@ -25,34 +25,51 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../style/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet"> 
+    <link
+      href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
     <title>Library</title>
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-12"></div>
-        <table>
-          <tr>
-            <td class="cell" id='1'></td>
-            <td class="cell" id='2'></td>
-            <td class="cell" id='3'></td>
-          </tr>
-          <tr>
-            <td class="cell" id='4'></td>
-            <td class="cell" id='5'></td>
-            <td class="cell" id='6'></td>
-          </tr>
-          <tr>
-            <td class="cell" id='7'></td>
-            <td class="cell" id='8'></td>
-            <td class="cell" id='9'></td>
-          </tr>
+        <div class="col-md-12">
+          <h3 class="card card-body bg-light">Tic Tac Toe</h3>
+          <p>one amazing and adictive game :D</p>
+          <div class="row">
+            <div class="col-md-6">
+              <table>
+                <tr>
+                  <td class="cell" id="1"></td>
+                  <td class="cell" id="2"></td>
+                  <td class="cell" id="3"></td>
+                </tr>
+                <tr>
+                  <td class="cell" id="4"></td>
+                  <td class="cell" id="5"></td>
+                  <td class="cell" id="6"></td>
+                </tr>
+                <tr>
+                  <td class="cell" id="7"></td>
+                  <td class="cell" id="8"></td>
+                  <td class="cell" id="9"></td>
+                </tr>
+              </table>
+            </div>
 
-        </table>
-        <div class="endgame">
-        <p> only visible after the end </p>
+            <div class="col-md-6">
+              <button id="startBtn" class="btn btn-success">start game!</button>
+              <button id="playAgainBtn" class="btn btn-success">Play Again</button>
+              <hr />
+              <div class="card card-body bg-light">
+                <h5>Turn for:</h5>
+                <p class="turnFor"></p>
+              </div>
+              <hr />
+              <h3 class="endgame card card-body bg-success" style="display: none;"></h3>
+            </div>
+          </div>
         </div>
       </div>
     </div>
